--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,11 @@
 <app-roll-die
   side-count="6"
+  (die-rolled)="dieRolled($event)"
 >
 </app-roll-die>
 <br>
 <app-roll-die
   side-count="20"
+  (die-rolled)="dieRolled($event)"
 >
 </app-roll-die>
